[package]
name = "rust-web-crawler"
version = "0.1.0"
authors = ["PM <patrick@noumenadigital.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1.4.3"